tests/builds/pass/pointerTest.cpl
int main(int argc){
	int a = 10;
	int* ptr = &a;

	return 0;

}
